Add Jupyter widgets card

--- a/src/code.html
+++ b/src/code.html
@@ -202,9 +202,35 @@
           </div>
         </div>
         <div class="card card-container">
-          <div class="card-content">
+          <div class="card-body">
             <h2 class="heading">Jupyter widgets</h2>
             <p class="lead">Interactive visualizations in Jupyter notebooks</p>
+            <img src="img/wealth_of_nations.png" width="100%" />
+            <div class="collapse" id="jupyter-widgets-collapse">
+              <p>
+                Jupyter widgets let you build interactive data
+                visualizations and graphical user interfaces in Jupyter
+                notebooks. Widgets can be inserted into a data processing
+                pipeline to understand data flows. This lets the data
+                scientist explore the data interactively, leading to a
+                shorter feedback loop.
+              </p>
+              <p>
+                Jupyter widgets are an important part of the Jupyter ecosystem.
+                They have been developed alongside Jupyter notebooks, with many
+                of the same contributors.
+              </p>
+              <p>
+                I started contributing regularly to the development effort in
+                May 2017, and was granted commit rights in July of the same year.
+              </p>
+              <div class="clearfix">
+                <a href="https://github.com/jupyter-widgets/ipywidgets">GitHub</a><a href="https://ipywidgets.readthedocs.io/en/latest/" class="float-right">Documentation</a>
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <a class="expand-button" href="#jupyter-widgets-collapse" role="button" data-toggle="collapse">Expand</a>
           </div>
         </div>
         <div class="card card-container">
