Initial text for JupyterLab

--- a/src/code.html
+++ b/src/code.html
@@ -233,12 +233,28 @@
             <a class="expand-button" href="#jupyter-widgets-collapse" role="button" data-toggle="collapse">Expand</a>
           </div>
         </div>
+
         <div class="card card-container">
-          <div class="card-content">
+          <div class="card-body">
             <h2 class="heading">jupyterlab-sql</h2>
-            <p class="lead">Something something</p>
+            <p class="lead">A SQL GUI in JupyterLab</p>
+            <div class="collapse" id="jupyterlab-sql-collapse">
+              <p>
+                jupyterlab-sql is a JupyterLab plugin that adds a GUI for viewing
+                SQL tables and interactively composing queries. It can be used
+                alongside a notebook or an editor for quickly iterating over
+                SQL queries.
+              </p>
+              <div class="clearfix">
+                <a href="https://github.com/pbugnion/jupyterlab-sql" class="float-left">GitHub</a>
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <a class="expand-button" href="#jupyterlab-sql-collapse" role="button" data-toggle="collapse">Expand</a>
           </div>
         </div>
+
       </div>
     </div><!-- /.container -->
 
