Add download numbers for gmaps.

--- a/src/code.html
+++ b/src/code.html
@@ -133,6 +133,9 @@
                 <p>
                   Visualize your data using heatmaps or symbols and overlay it with GeoJSON.
                 </p>
+                <p>
+                  gmaps has been downloaded over <a href="https://anaconda.org/conda-forge/gmaps">130,000 times</a> using conda alone. It has over 600 stars on GitHub.
+                </p>
                 <div class="clearfix">
                   <a href="https://github.com/pbugnion/gmaps" class="float-left">GitHub</a><a href="https://jupyter-gmaps.readthedocs.io/" class="float-right">Documentation</a>
                 </div>
