Use link array to avoid floating links right

--- a/src/code.html
+++ b/src/code.html
@@ -86,7 +86,6 @@
        text-decoration: none;
      }
     </style>
-
     <script>
      $(document).ready(function() {
        $(".expand-button").click(function() {
@@ -136,8 +135,9 @@
                 <p>
                   gmaps has been downloaded over <a href="https://anaconda.org/conda-forge/gmaps">130,000 times</a> using conda alone. It has over 600 stars on GitHub.
                 </p>
-                <div class="clearfix">
-                  <a href="https://github.com/pbugnion/gmaps" class="float-left">GitHub</a><a href="https://jupyter-gmaps.readthedocs.io/" class="float-right">Documentation</a>
+                <div class="link-array">
+                  <a href="https://github.com/pbugion/gmaps">GitHub</a>
+                  <a href="https://jupyter-gmaps.readthedocs.io">Documentation</a>
                 </div>
               </div>
             </div>
@@ -158,8 +158,9 @@
                 <p>
                   I work on Dash Bootstrap components with <a href="https://tcbegley.com/">Tom Begley</a>.
                 </p>
-                <div class="clearfix">
-                  <a href="https://github.com/facultyai/dash-bootstrap-components" class="float-left">GitHub</a><a href="https://dash-bootstrap-components.opensource.faculty.ai/" class="float-right">Documentation</a>
+                <div class="link-array">
+                  <a href="https://github.com/facultyai/dash-bootstrap-components">GitHub</a>
+                  <a href="https://dash-bootstrap-components.opensource.faculty.ai/">Documentation</a>
                 </div>
               </div>
             </div>
@@ -179,8 +180,8 @@
                   alongside a notebook or an editor for quickly iterating over
                   SQL queries.
                 </p>
-                <div class="clearfix">
-                  <a href="https://github.com/pbugnion/jupyterlab-sql" class="float-left">GitHub</a>
+                <div class="link-array">
+                  <a href="https://github.com/pbugnion/jupyterlab-sql">GitHub</a>
                 </div>
               </div>
             </div>
@@ -210,8 +211,9 @@
                 <p>
                   Faculty Platform is developed by Faculty. I work predominantly on backend application code and the infrastructure layer. I also have technical lead and, occasionally, product ownership responsibilities. As the first engineer to work on the platform team, I have guided the growth and development of the platform since its inception.
                 </p>
-                <div class="clearfix">
-                  <a href="https://faculty.ai/products-services/platform/" class="float-left">Website</a><a href="https://docs.faculty.ai/" class="float-right">Documentation</a>
+                <div class="link-array">
+                  <a href="https://faculty.ai/products-services/platform/">Website</a>
+                  <a href="https://docs.faculty.ai/">Documentation</a>
                 </div>
               </div>
             </div>
@@ -242,8 +244,9 @@
                   I started contributing regularly to the development effort in
                   May 2017, and was granted commit rights in July of the same year.
                 </p>
-                <div class="clearfix">
-                  <a href="https://github.com/jupyter-widgets/ipywidgets">GitHub</a><a href="https://ipywidgets.readthedocs.io/en/latest/" class="float-right">Documentation</a>
+                <div class="link-array">
+                  <a href="https://github.com/jupyter-widgets/ipywidgets">GitHub</a>
+                  <a href="https://ipywidgets.readthedocs.io/en/latest/">Documentation</a>
                 </div>
               </div>
             </div>
