Correct meta information on contacts page

--- a/src/contact.html
+++ b/src/contact.html
@@ -21,6 +21,20 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400' rel='stylesheet' type='text/css'>
 
+    <!-- Meta information -->
+    <script type="application/ld+json">
+     {
+       "@context": "https://schema.org",
+       "@type": "Person",
+       "url": "https://pascalbugnion.net",
+       "name": "Pascal Bugnion",
+       "givenName": "Pascal",
+       "familyName": "Bugnion",
+       "jobTitle": "Technical architect",
+       "homeLocation": "London"
+     }
+    </script>
+
     <!-- Customised stylesheets -->
     <link href="main.css" rel="stylesheet">
 
@@ -93,12 +107,12 @@
                 </p>
 
             </div>
-            <div class="col-md-5 col-lg-4 order-first order-md-last headshot-img-container"><img itemprop="image" src="/img/Headshot-Pascal-1.jpg" alt="Photo of Pascal Bugnion" width="100%""/></div>
+            <div class="col-md-5 col-lg-4 order-first order-md-last headshot-img-container"><img src="/img/Headshot-Pascal-1.jpg" alt="Photo of Pascal Bugnion" width="100%""/></div>
         </div>
         <div class="row contact-links-row">
           <div class="col-md-7 col-lg-8">
                 <!-- Icons downloaded from: https://www.iconfinder.com/icons/287725/github_icon#size=128 -->
-            <p class="contact-row"><span class="contact-key"><img src="img/1414849266_mail-128.png" height=36 width=36 alt="email"/></span><span itemprop="email" class="contact-value"><script type="text/javascript">
+            <p class="contact-row"><span class="contact-key"><img src="img/1414849266_mail-128.png" height=36 width=36 alt="email"/></span><span class="contact-value"><script type="text/javascript">
 // rot13 rotated text
 document.write("<n uers=\"znvygb:cnfpny@ohtavba.bet\">cnfpny@ohtavba.bet</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));
 </script></span>
