Correct description on talks page

--- a/src/talks.html
+++ b/src/talks.html
@@ -7,10 +7,7 @@
 
     <title>Pascal Bugnion - Talks</title>
 
-    <meta name="description" content="Open source projects created or contributed to by Pascal.
-    These include 'scikit-monaco', an open source library for Monte Carlo integration in Python,
-    'contactpp', a library for generating pseudopotentials for the contact interaction, and
-    'bibscrape', a series of shell scripts for downloading bibtex citations from journal websites." />
+    <meta name="description" content="Slides and videos for talks that Pascal Bugnion has given." />
 
     <!-- Twitter Bootstrap -->
     <!-- JQuery is needed for Bootstrap to work -->
