Update description for code page

--- a/src/code.html
+++ b/src/code.html
@@ -8,10 +8,10 @@
 
     <title>Pascal Bugnion - Code</title>
 
-    <meta name="description" content="Open source projects created or contributed to by Pascal.
-                These include 'scikit-monaco', an open source library for Monte Carlo integration in Python,
-                'contactpp', a library for generating pseudopotentials for the contact interaction, and
-                'bibscrape', a series of shell scripts for downloading bibtex citations from journal websites." />
+    <meta name="description" content="Projects created or contributed to by Pascal Bugnion.
+                These include gmaps, a Jupyter plugin for visualising geographical data on Google maps,
+                Dash Bootstrap components, a library of components and layouts for Plotly Dash, and
+                Faculty Platform, a data science workbench." />
 
     <!-- Twitter Bootstrap -->
     <script src="https://code.jquery.com/jquery.js"></script>
