Update description on landing and contact pages.

--- a/src/contact.html
+++ b/src/contact.html
@@ -7,7 +7,7 @@
 
     <title>About Pascal Bugnion</title>
 
-    <meta name="description" content="Contact details and general biographical information." />
+    <meta name="description" content="Contact details and general biographical information for Pascal Bugnion." />
 
      <!-- Twitter Bootstrap -->
     <script src="https://code.jquery.com/jquery.js"></script>
