--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
         <title>Pascal Bugnion</title>
 
-        <meta name="description" content="Pascal Bugnion is a data engineer and open source enthusiast." />
+        <meta name="description" content="Pascal Bugnion is technical architect and team lead. This is his personal website." />
         <meta name="keywords" content="Pascal Bugnion,Bugnion,data engineer,open source" />
 
          <!-- Twitter Bootstrap -->
