--- a/src/contact.html
+++ b/src/contact.html
@@ -74,7 +74,10 @@
     <nav class="navbar navbar-expand-md navbar-light fixed-top" id="top-navbar">
       <div class="container">
         <a class="navbar-brand" href="/index.html">Pascal Bugnion</a>
-        <div class="collapse navbar-collapse">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar-navigation">
           <ul class="navbar-nav">
             <li class="nav-item"><a href="code.html" class="nav-link">Code</a></li>
             <li class="nav-item"><a href="talks.html" class="nav-link">Talks</a></li>
