Typos on index page

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
         <title>Pascal Bugnion</title>
 
-        <meta name="description" content="Pascal Bugnion is technical architect and team lead. This is his personal website." />
+        <meta name="description" content="Pascal Bugnion is a technical architect and team lead. This is his personal website." />
         <meta name="keywords" content="Pascal Bugnion,Bugnion,data engineer,open source" />
 
          <!-- Twitter Bootstrap -->
@@ -21,7 +21,6 @@
 
         <!-- Fonts -->
         <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400' rel='stylesheet' type='text/css'>
 
         <!-- Meta information -->
         <script type="application/ld+json">
