--- a/src/talks.html
+++ b/src/talks.html
@@ -9,9 +9,8 @@
 
     <meta name="description" content="Slides and videos for talks that Pascal Bugnion has given." />
 
-    <!-- Twitter Bootstrap -->
-    <!-- JQuery is needed for Bootstrap to work -->
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Twitter Bootstrap and its dependencies (jQuery and Popper for tooltips) -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
